Finalised naming goals
all goals are now named accordingly

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -2001,13 +2001,134 @@ MEX_verde_mexico: "Verde Mexico"
 MEX_verde_mexico_desc: ""
 
 
+	### MILITARY TREE ##
 
-
-
-
-
-
-
+MEX_armada_de_mexico: "Armada de Mexico"
+MEX_armada_de_mexico_desc: ""
+MEX_retrofitting_the_fleet: "Retrofitting the Fleet"
+MEX_retrofitting_the_fleet_desc: ""
+MEX_advanced_training_programs: "Advanced Training Programs"
+MEX_advanced_training_programs_desc: ""
+MEX_aquisition_of_new_vessels: "Aquisition of New Vessels"
+MEX_aquisition_of_new_vessels_desc: ""
+MEX_development_of_domestic_shipbuilding: "Development of Domestic Shipbuilding"
+MEX_development_of_domestic_shipbuilding_desc: ""
+MEX_modernization_of_the_armada: "Modernization of the Armada"
+MEX_modernization_of_the_armada_desc: ""
+MEX_evaluate_naval_budget: "Evaluate Naval Budget"
+MEX_evaluate_naval_budget_desc: ""
+MEX_heroica_escuela_naval_militar: "Heroica Escuela Naval Militar"
+MEX_heroica_escuela_naval_militar_desc: ""
+MEX_expanding_naval_avation: "Expanding Naval Aviation"
+MEX_expanding_naval_avation_desc: ""
+MEX_cuerpo_de_infanteria_de_marina: "Cuerpo de Infanteria de Marina"
+MEX_cuerpo_de_infanteria_de_marina_desc: ""
+MEX_fuerza_aerea_mexicana: "Fuerza Aerea Mexicana"
+MEX_fuerza_aerea_mexicana_desc: ""
+MEX_modernizing_aircraft_fleet: "Modernizing Aircraft Fleet"
+MEX_modernizing_aircraft_fleet_desc: ""
+MEX_buy_russian_air_craft: "Buy Russian Aircraft"
+MEX_buy_russian_air_craft_desc: ""
+MEX_buy_american_air_craft: "Buy American Aircraft"
+MEX_buy_american_air_craft_desc: ""
+MEX_upgrading_air_bases: "Upgrading Air Bases"
+MEX_upgrading_air_bases_desc: ""
+MEX_reforming_air_force_air_doctrine: "Reforming the Air Force"
+MEX_reforming_air_force_air_doctrine_desc: ""
+MEX_upgrading_air_defense_systems: "Upgrading Air Defense Systems"
+MEX_upgrading_air_defense_systems_desc: ""
+MEX_domestic_drone_production: "Domestic Drone Production"
+MEX_domestic_drone_production_desc: ""
+MEX_domestic_aircraft_prodcution: "Domestic Aircraft Production"
+MEX_domestic_aircraft_prodcution_desc: ""
+MEX_technological_upgrades: "Technological Upgrades"
+MEX_technological_upgrades_desc: ""
+MEX_el_colegio_del_aire: "El Colegio del Aire"
+MEX_el_colegio_del_aire_desc: ""
+MEX_revulate_funding: "Revulate Funding"
+MEX_revulate_funding_desc: ""
+MEX_missle_program: "Missile Program"
+MEX_missle_program_desc: ""
+MEX_installation_of_radar_systems: "Installation of Radar Systems"
+MEX_installation_of_radar_systems_desc: ""
+MEX_acquiring_patriot_systems: "Acquiring Patriot Systems"
+MEX_acquiring_patriot_systems_desc: ""
+MEX_airborne_school: "Airborne School"
+MEX_airborne_school_desc: ""
+MEX_brigada_de_fusileros_paracaidistas: "Brigada de Fusileros Paracaidistas"
+MEX_brigada_de_fusileros_paracaidistas_desc: ""
+MEX_new_and_imporved_air_doctrine: "New and Improved Air Doctrine"
+MEX_new_and_imporved_air_doctrine_desc: ""
+MEX_air_superiority: "Air Superiority"
+MEX_air_superiority_desc: ""
+MEX_ground_support: "Ground Support"
+MEX_ground_support_desc: ""
+MEX_ejercito_mexicano: "Ejercito Mexicano"
+MEX_ejercito_mexicano_desc: ""
+MEX_modernizing_the_army: "Modernizing the Army"
+MEX_modernizing_the_army_desc: ""
+MEX_the_heroic_military_college: "The Heroic Military College"
+MEX_the_heroic_military_college_desc: ""
+MEX_military_doctrine_overhaul: "Military Doctrine Overhaul"
+MEX_military_doctrine_overhaul_desc: ""
+MEX_construction_of_arms_factories: "Construction of Arms Factories"
+MEX_construction_of_arms_factories_desc: ""
+MEX_guardia_nacional: "Guardia Nacional"
+MEX_guardia_nacional_desc: ""
+MEX_cuerpo_de_guardias_presidenciales: "Cuerpo de Guardias Presidenciales"
+MEX_cuerpo_de_guardias_presidenciales_desc: ""
+MEX_continuation_of_modernization: "Continuation of Modernization"
+MEX_continuation_of_modernization_desc: ""
+MEX_increase_military_spending: "Increase Military Spending"
+MEX_increase_military_spending_desc: ""
+MEX_foreign_officer_training: "Foreign Officer Training"
+MEX_foreign_officer_training_desc: ""
+MEX_upscale_of_officer_training: "Upscale of Officer Training"
+MEX_upscale_of_officer_training_desc: ""
+MEX_effective_military_budgeting: "Effective Military Budgeting"
+MEX_effective_military_budgeting_desc: ""
+MEX_restructuring_military_command: "Restructuring Military Command"
+MEX_restructuring_military_command_desc: ""
+MEX_removing_subpar_generals: "Removing Subpar Generals"
+MEX_removing_subpar_generals_desc: ""
+MEX_enforcing_the_partial_draft: "Enforcing the Partial Draft"
+MEX_enforcing_the_partial_draft_desc: ""
+MEX_a_volunteer_force: "A Volunteer Force"
+MEX_a_volunteer_force_desc: ""
+MEX_logistical_optimization: "Logistical Optimization"
+MEX_logistical_optimization_desc: ""
+MEX_advancing_general_military_knowledge: "Advancing General Military Knowledge"
+MEX_advancing_general_military_knowledge_desc: ""
+MEX_nuevo_ejercito_mexicano: "Nuevo Ejercito Mexicano"
+MEX_nuevo_ejercito_mexicano_desc: ""
+MEX_restrctured_armed_forces: "Restructured Armed Forces"
+MEX_restrctured_armed_forces_desc: ""
+MEX_a_loyal_military: "A Loyal Military"
+MEX_a_loyal_military_desc: ""
+MEX_spirit_of_the_aztecs: "Spirit of the Aztecs"
+MEX_spirit_of_the_aztecs_desc: ""
+MEX_fuerzas_especiales: "Fuerzas Especiales"
+MEX_fuerzas_especiales_desc: ""
+MEX_jungle_operations_unit: "Jungle Operations Unit"
+MEX_jungle_operations_unit_desc: ""
+MEX_special_reconnaissance_training: "Special Reconnaissance Training"
+MEX_special_reconnaissance_training_desc: ""
+MEX_us_joint_special_forces_training: "US Joint Special Forces Training"
+MEX_us_joint_special_forces_training_desc: ""
+MEX_unconventional_combat_experts: "Unconventional Combat Experts"
+MEX_unconventional_combat_experts_desc: ""
+MEX_expanding_the_fuerzas_especiales: "Expanding the Fuerzas Especiales"
+MEX_expanding_the_fuerzas_especiales_desc: ""
+MEX_centro_nacional_inteligencia: "Centro Nacional de Inteligencia"
+MEX_centro_nacional_inteligencia_desc: ""
+MEX_foreign_intelligence_branch: "Foreign Intelligence Branch"
+MEX_foreign_intelligence_branch_desc: ""
+MEX_expand_civilian_intelligence: "Expand Civilian Intelligence"
+MEX_expand_civilian_intelligence_desc: ""
+MEX_tzinacan_radars: "Tzinacan Radars"
+MEX_tzinacan_radars_desc: ""
+MEX_plain_clothes_intelligence_agents: "Plain Clothes Intelligence Agents"
+MEX_plain_clothes_intelligence_agents_desc: ""
 
 
 
