move rework part into modding resources

--- a/Modding resources/Momo's China Democracy Tree Rework/localisation/english/MD_focus_CHI_l_english.yml
+++ b/Modding resources/Momo's China Democracy Tree Rework/localisation/english/MD_focus_CHI_l_english.yml
@@ -286,20 +286,34 @@
  CHI_Netizen_Nation_desc: "The internet is not a substantial threat to our authority. In fact, we may even be able to use it to our advantage."
  CHI_An_Open_Window: "An Open Window"
  CHI_An_Open_Window_desc: "Deng Xiaoping once famously described the opening up of China as opening a window for fresh air. While, as Deng also said, some \"flies\" are bound to fly in when this happens, this is a risk we must take to enjoy the benefits of openness."
- CHI_Let_a_Hundred_Flowers_Bloom: "Let a Hundred Flowers Bloom"
- CHI_Let_a_Hundred_Flowers_Bloom_desc: "In 1956, Mao Zedong initiated the Hundred Flowers Campaign, calling for Chinese citizens to openly air their grievances towards the government. While that campaign ended in repression and a return to the status quo, a reboot of the same campaign does not necessarily have to end the same way."
+ CHI_Let_Hundred_Birds_Singing_Together: "Let Hundred Birds Singing Together"
+ CHI_Let_Hundred_Birds_Singing_Together_desc: ""
+ CHI_Let_Hundred_Flowers_Bloom_Again: "Let a Hundred Flowers Bloom"
+ CHI_Let_Hundred_Flowers_Bloom_Again_desc: "In 1956, Mao Zedong initiated the Hundred Flowers Campaign, calling for Chinese citizens to openly air their grievances towards the government. While that campaign ended in repression and a return to the status quo, a reboot of the same campaign does not necessarily have to end the same way."
  CHI_Freedom_of_Speech: "Freedom of Speech"
  CHI_Freedom_of_Speech_desc: "Now that we have allowed our citizens to air their grievances, it has become clear that our society has progressed to the point where such things can be said in public without threatening the stability of the nation. We should proceed with further."
  CHI_Allow_Foreign_Social_Media: "Allow Foreign Social Media"
  CHI_Allow_Foreign_Social_Media_desc: "Social media sites like Facebook are starting to gain traction. Despite the risks, we should allow these sites to operate in our country as part of our \"Open Window\" policy."
  CHI_Liberalize_the_Media: "Liberalize the Media"
  CHI_Liberalize_the_Media_desc: "Up till this point, all forms of media in China have had a strong state influence whether directly or indirectly. The time has come for us to end this."
+ CHI_End_Catch_all_Crime: "End Catch-all Crime"
+ CHI_End_Catch_all_Crime_desc: ""
+ CHI_Freedom_of_Speech: "Freedom of Speech"
+ CHI_Freedom_of_Speech_desc: "Now that we have allowed our citizens to air their grievances, it has become clear that our society has progressed to the point where such things can be said in public without threatening the stability of the nation. We should proceed with further."
+ CHI_Remove_Restrictions_on_Party_Formation: "Remove Restrictions on Party Formation"
+ CHI_Remove_Restrictions_on_Party_Formation_desc: ""
+ CHI_De_ideology_Politics: "De-ideology Politics"
+ CHI_De_ideology_Politics_desc: ""
  CHI_Question_the_Four_Cardinal_Principles: "Question the Four Cardinal Principles"
  CHI_Question_the_Four_Cardinal_Principles_desc: "Deng Xiaoping's Four Cardinal Principles included upholding the socialist path, the people's democratic dictatorship, the leadership of the CPC and Maozedong thought. The inclusion of these principles means that debate about the nature of authoritarian rule in China has not been allowed. If our country is to progress, this should be amended to help diversify debate on China's future."
  CHI_Unchain_the_8_Democratic_Parties: "Unchain the 8 Democratic Parties"
  CHI_Unchain_the_8_Democratic_Parties_desc: "While the Communist Party dominates Chinese politics, 8 other legal parties exist as part of the country's political system. However, up until now they have had little influence over policy and lack an independent voice. The lifting of restrictions on these existing political parties could act as a test to ascertain the viability of establishing multi-party democracy in China."
+ CHI_Allow_PC_Independent_Representation: "Allow People's Congress Independent Representation"
+ CHI_Allow_PC_Independent_Representation_desc: ""
  CHI_De_Politicize_the_Military: "De-Politicize the Military"
  CHI_De_Politicize_the_Military_desc: "Realizing the nationalization of the military is the only way to establish a democratic government."
+ CHI_Democracy_with_Chinese_Characteristics: "Democracy with Chinese Characteristics"
+ CHI_Democracy_with_Chinese_Characteristics_desc: "Democracy as we know it is European in origin. While our recent liberalizations have put us on a path towards adopting Western-style institutions, that does not mean that we have to compromise our traditional cultural values."
  CHI_Free_and_Fair_Elections: "Democracy with Chinese Characteristics"
  CHI_Free_and_Fair_Elections_desc: "Democracy as we know it is European in origin. While our recent liberalizations have put us on a path towards adopting Western-style institutions, that does not mean that we have to compromise our traditional cultural values."
  CHI_Support_the_Communists: "Support the Communists"
@@ -372,6 +386,8 @@
  CHI_Two_Systems_desc: "While most of China can still conform to our existing form of governance, we should keep to Deng Xiaoping's \"One Country Two Systems\" principle and allow certain parts of China to maintain their own unique political, economic, and legal systems. This approach will reduce opposition to our authority while preserving the integrity of the nation."
  CHI_Extend_Interpretation_of_the_Systems: "Extend Interpretation of the Systems"
  CHI_Extend_Interpretation_of_the_Systems_desc: "\"One Country Two Systems\" was originally formulated to facilitate the return of Macau and Hong Kong to Chinese rule, the principle has the potential to be applied to other cases if we allow for more extensive interpretations of it."
+ CHI_Promote_National_Security_Law_in_Hong_Kong: "Promote National Security Bill in Hong Kong"
+ CHI_Promote_National_Security_Law_in_Hong_Kong_desc: "In order to prevent the chaos caused by the promotion of democratic reform in Hong Kong in the future, the National People's Congress must first implement the National Security Bill in Hong Kong in accordance with Article 23 of the Hong Kong Basic Law."
  CHI_Consider_Electoral_Reform_in_Hong_Kong: "Consider Electoral Reform in Hong Kong"
  CHI_Consider_Electoral_Reform_in_Hong_Kong_desc: "Given the strong pressure in Hong Kong for reforms of the means by which Legislative Council representatives and the Chief Executive are elected, we should consider whether to make concessions to the people of Hong Kong in this particular area, or whether to rule out universal suffrage once and for all."
  CHI_The_NPCSC_Decision_on_Hong_Kong: "The NPCSC Decision on Hong Kong"
@@ -1695,6 +1711,8 @@
 
  hongkong_category: "Hong Kong Politics"
  hongkong_category_desc: "The former British colony of Hong Kong is now a Special Administrative Region of the People's Republic of China. While many in the territory welcomed the return to Chinese rule, there is significant concern regarding what effect China's authoritarian tendencies may have on the city's highly-valued freedoms. The people of Hong Kong are not afraid to translate these concerns into action in the form of mass protest whenever these freedoms seem to come under threat."
+ HKG_MAC_individual_visit_scheme: "Individual Visit Scheme (to Hong Kong and Macau)"
+ HKG_MAC_individual_visit_scheme_desc: "The Individual Visit Scheme allow travelers from Mainland China to visit Hong Kong and Macau on an individual basis. The scheme will boost the economies of Hong Kong and Macao and minimize the impact on the tourism industry following the outbreak of SARS."
  HKG_declare_independence: "Declare Independence"
  HKG_declare_independence_desc: "If support for localism grows strong enough among the people of Hong Kong, we will be able to declare independence from our overlords in Beijing."
  reconsider_the_NPCSC_decision: "Reconsider the NPCSC Decision on Hong Kong"
@@ -1786,6 +1804,9 @@
  ETK_sar_exec: "§BXinjiang SAR Establish§!"
  jebtsundamba_sat: "§B9th Jebtsundamba Khutuktu finished sitting-in-the-bed§!"
  CHI_taiwan_strait_war: "§BThe Taiwan Strait War Erupted§!"
+ 
+ #Dynamic Trigger
+ shanghai_clique_control_tt: "Shanghai Clique must control the power"
  
  #Tech Bonus
  CHI_Xiaomi_Vehicle: "Xiaomi Vehicle"
