--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -43,17 +43,17 @@
  MEX_judicial_power_bad: "Inefficient Judicial Power"
  MEX_judicial_power_bad_desc: ""
 
- #focuses
- MEX_sedena: "SEDENA"
- MEX_sedena_desc: "The Mexican Secretariat of National Defense (SEDENA) is the government department responsible for managing Mexico's Army, Air Force, and Navy. SEDENA keeps its scope compact and pivots on resolving internal affairs rather than preparing for foreign threats, consequently entailing Mexico vulnerable to one."
- MEX_mexican_army: "The Mexican Army"
- MEX_mexican_army_desc: "The Mexican Army, like the rest branches, keeps its interests in internal affairs. The Mexican Army is well known for dealing with the cartels along with its exceptional ability to help civilians in need. Nevertheless, apart from internal affairs, the Mexican Army lacks fundamental components that would render it combat-ready on the world stage."
- MEX_mexican_navy: "The Mexican Navy"
- MEX_mexican_navy_desc: "The Mexican Navy, out of all branches of our military, is by far the most underdeveloped. For over a century, concepts of a Grand navy were deemed outdated and unimportant by Mexicans. Instead, more emphasis was put on guarding coastal territories while maintaining a cheaper alternative. Despite our past decisions, we could always change our stance and start developing a sizable and sturdy navy!"
- MEX_mexican_air_force: "The Mexican Air Force"
- MEX_mexican_air_force_desc: "The Mexican airforce consists of light aircraft, attack helicopters, and their representative logistical variants. It is mainly used for internal affairs and helping against the cartels. However, in the face of an external threat, we wouldn't stand a chance, as we lack any meaningful impact. Committing to an increased budget will ensure our strength to repel such force back from where it came."
- MEX_millitary_investments: "Millitary Investments"
- MEX_millitary_investments_desc: "Putting forward general infantry investments is essential for our reforms and visions. Since the infantry holds such a vital point in any functional army, it cannot get overlooked or bypassed."
+ ### focuses (Outdated focuses, use the "#" for each focus's description that is being reutilized  other goals) ###
+
+
+ #MEX_mexican_army: "The Mexican Army"
+ #MEX_mexican_army_desc: "The Mexican Army, like the rest branches, keeps its interests in internal affairs. The Mexican Army is well known for dealing with the cartels along with its exceptional ability to help civilians in need. Nevertheless, apart from internal affairs, the Mexican Army lacks fundamental components that would render it combat-ready on the world stage."
+ #MEX_mexican_navy: "The Mexican Navy"
+ #MEX_mexican_navy_desc: "The Mexican Navy, out of all branches of our military, is by far the most underdeveloped. For over a century, concepts of a Grand navy were deemed outdated and unimportant by Mexicans. Instead, more emphasis was put on guarding coastal territories while maintaining a cheaper alternative. Despite our past decisions, we could always change our stance and start developing a sizable and sturdy navy!"
+ #MEX_mexican_air_force: "The Mexican Air Force"
+ #MEX_mexican_air_force_desc: "The Mexican airforce consists of light aircraft, attack helicopters, and their representative logistical variants. It is mainly used for internal affairs and helping against the cartels. However, in the face of an external threat, we wouldn't stand a chance, as we lack any meaningful impact. Committing to an increased budget will ensure our strength to repel such force back from where it came."
+ #MEX_millitary_investments: "Millitary Investments"
+ #MEX_millitary_investments_desc: "Putting forward general infantry investments is essential for our reforms and visions. Since the infantry holds such a vital point in any functional army, it cannot get overlooked or bypassed."
  MEX_granjas_militares: "Granjas Militares"
  MEX_granjas_militares_desc: "Regarding combat readiness, rations can be as important as firearms. We can establish the military with a never-ending flow of mandatory nourishments by introducing the manufacture of military farms. These farms will always answer to the needs of the military by guaranteeing it stays provisioned."
  MEX_dgfave: "D.G.FA.V.E"
@@ -834,7 +834,7 @@ MEX_advocating_labour_rights_desc: ""
 MEX_environmental_regulations: "Enviromental Regulations"
 MEX_environmental_regulations_desc: ""
 MEX_investments_into_the_military: "Investments into the Military"
-MEX_investments_into_the_military_desc: ""
+MEX_investments_into_the_military_desc: "Putting forward general infantry investments is essential for our reforms and visions. Since the infantry holds such a vital point in any functional army, it cannot get overlooked or bypassed."
 MEX_healthcare_reforms: "Healthcare Reforms"
 MEX_healthcare_reforms_desc: ""
 MEX_religous_teachings_in_schools: "Religious Teachings in School"
@@ -2003,8 +2003,11 @@ MEX_verde_mexico_desc: ""
 
 	### MILITARY TREE ##
 
+MEX_sedena: "SEDENA"
+MEX_sedena_desc: "The Mexican Secretariat of National Defense (SEDENA) is the government department responsible for managing Mexico's Army, Air Force, and Navy. SEDENA keeps its scope compact and pivots on resolving internal affairs rather than preparing for foreign threats, consequently entailing Mexico vulnerable to one."
+
 MEX_armada_de_mexico: "Armada de Mexico"
-MEX_armada_de_mexico_desc: ""
+MEX_armada_de_mexico_desc: "The Mexican Navy, out of all branches of our military, is by far the most underdeveloped. For over a century, concepts of a Grand navy were deemed outdated and unimportant by Mexicans. Instead, more emphasis was put on guarding coastal territories while maintaining a cheaper alternative. Despite our past decisions, we could always change our stance and start developing a sizable and sturdy navy!"
 MEX_retrofitting_the_fleet: "Retrofitting the Fleet"
 MEX_retrofitting_the_fleet_desc: ""
 MEX_advanced_training_programs: "Advanced Training Programs"
@@ -2024,7 +2027,7 @@ MEX_expanding_naval_avation_desc: ""
 MEX_cuerpo_de_infanteria_de_marina: "Cuerpo de Infanteria de Marina"
 MEX_cuerpo_de_infanteria_de_marina_desc: ""
 MEX_fuerza_aerea_mexicana: "Fuerza Aerea Mexicana"
-MEX_fuerza_aerea_mexicana_desc: ""
+MEX_fuerza_aerea_mexicana_desc: "The Mexican airforce consists of light aircraft, attack helicopters, and their representative logistical variants. It is mainly used for internal affairs and helping against the cartels. However, in the face of an external threat, we wouldn't stand a chance, as we lack any meaningful impact. Committing to an increased budget will ensure our strength to repel such force back from where it came."
 MEX_modernizing_aircraft_fleet: "Modernizing Aircraft Fleet"
 MEX_modernizing_aircraft_fleet_desc: ""
 MEX_buy_russian_air_craft: "Buy Russian Aircraft"
@@ -2064,7 +2067,7 @@ MEX_air_superiority_desc: ""
 MEX_ground_support: "Ground Support"
 MEX_ground_support_desc: ""
 MEX_ejercito_mexicano: "Ejercito Mexicano"
-MEX_ejercito_mexicano_desc: ""
+MEX_ejercito_mexicano_desc: "The Mexican Army, like the rest branches, keeps its interests in internal affairs. The Mexican Army is well known for dealing with the cartels along with its exceptional ability to help civilians in need. Nevertheless, apart from internal affairs, the Mexican Army lacks fundamental components that would render it combat-ready on the world stage."
 MEX_modernizing_the_army: "Modernizing the Army"
 MEX_modernizing_the_army_desc: ""
 MEX_the_heroic_military_college: "The Heroic Military College"
@@ -2129,6 +2132,46 @@ MEX_tzinacan_radars: "Tzinacan Radars"
 MEX_tzinacan_radars_desc: ""
 MEX_plain_clothes_intelligence_agents: "Plain Clothes Intelligence Agents"
 MEX_plain_clothes_intelligence_agents_desc: ""
+
+
+### THE MEXICAN CONSTITUTION ###
+
+MEX_the_mexican_constitution: "The Mexican Constitution"
+MEX_the_mexican_constitution_desc: ""
+MEX_article_forty_one: "Article Forty One"
+MEX_article_forty_one_desc: ""
+MEX_undermining_article_forty_one: "Undermining Article Forty One"
+MEX_undermining_article_forty_one_desc: ""
+MEX_Amending_article_forty_one: "Amending Article Forty One"
+MEX_article_two: "Article Two"
+MEX_article_two_desc: ""
+MEX_gripping_the_states: "Gripping the States"
+MEX_gripping_the_states_desc: ""
+MEX_loosening_the_states: "Loosening the States"
+MEX_loosening_the_states_desc: ""
+MEX_article_twenty_four: "Article Twenty Four"
+MEX_article_twenty_four_desc: ""
+MEX_true_seperation: "True Separation"
+MEX_true_seperation_desc: ""
+MEX_State_serves_the_church: "State Serves the Church"
+MEX_State_serves_the_church_desc: ""
+MEX_article_seventy_six: "Article Seventy Six"
+MEX_article_seventy_six_desc: ""
+MEX_amending_the_article: "Amending the Article"
+MEX_amending_the_article_desc: ""
+MEX_The_status_quo: "The Status Quo"
+MEX_The_status_quo_desc: ""
+
+
+### MEDIA OUTLET BRANCH ###
+
+MEX_the_media_outlets: "The Media Outlets"
+MEX_the_media_outlets_desc: ""
+
+
+
+
+
 
 
 
