--- a/Changelog.txt
+++ b/Changelog.txt
@@ -50,6 +50,7 @@ v1.10.3
   - Reworked modifiers of Coal Powered Nation/Renewable Powered Nation for Botswana
   - Rebalanced a lot of Botswana's tree (focus durations, monetary costs, bonuses etc.)
   - Added Army General for POL
+  - Reworked Liberia's political parties, leaders and generals
 
  Localisation
   - Major fixes and improvements to the Russian localization
