--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6784,23 +6784,38 @@
  LES.Nat_Autocracy_desc: ""
  LES.Monarchist: "£generic_Monarchist_small House of Seeiso"
  LES.Monarchist_desc: ""
- LIB.conservatism: "£generic_conservatism_small Congress for Democratic Change"
- LIB.conservatism_desc: ""
- LIB.liberalism: "£LIB_liberalism_small Unity Party"
- LIB.liberalism_icon: "£LIB_liberalism_small"
- LIB.liberalism_desc: ""
- LIB.Western_Autocracy: "£LIB_Western_Autocracy_small National Democratic Party of Liberia"
+ LIB.Western_Autocracy: "£LIB_Western_Autocracy_small (NDPL) - National Democratic Party of Liberia"
+ LIB.Western_Autocracy_desc: "(Nationalism) - The National Democratic Party of Liberia is the political party once headed by Dr. Samuel Doe. While heavily authoritarian, anti-communist and anti-freemason, Doe aligned the country with the US. After Doe's overthrow and death in the 1st Liberian Civil War, his warlord friends and cabinet members have kept the party alive."
  LIB.Western_Autocracy_icon: "£LIB_Western_Autocracy_small"
- LIB.Western_Autocracy_desc: ""
- LIB.anarchist_communism: "£generic_anarchist_communism_small United People's Party"
- LIB.anarchist_communism_desc: ""
- LIB.neutral_Social: "£generic_neutral_Social_small National Democratic Coalition"
- LIB.neutral_Social_desc: ""
- LIB.Neutral_Autocracy: "£generic_Neutral_Autocracy_small National Democratic Party of Liberia"
- LIB.Neutral_Autocracy_desc: ""
- LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small National Patriotic Party"
+ LIB.conservatism: "£LIB_conservatism_small (LNU) - Liberia National Union"
+ LIB.conservatism_icon: "£LIB_conservatism_small"
+ LIB.liberalism: "£LIB_liberalism_small (UP) - Unity Party"
+ LIB.liberalism_desc: "(Liberal Democracy) - The Unity Party is the main opposition party to Taylor. The party was created in 1984 to run in the first elections against Samuel Doe after the coup of 1980. The party advocates liberal democracy and economic liberalisation. It also advocates closer ties with the US, who has been the traditional ally of the country."
+ LIB.liberalism_icon: "£LIB_liberalism_small"
+ LIB.socialism: "£LIB_socialism_small (RAP) - Reformation Alliance Party"
+ LIB.socialism_icon: "£LIB_socialism_small"
+ LIB.anarchist_communism: "£LIB_anarchist_communism_small (LPP) - Liberian People's Party"
+ LIB.anarchist_communism_desc: "(Democratic Socialism) - The Liberian People's Party is a pan-African socialist party."
+ LIB.anarchist_communism_icon: "£LIB_anarchist_communism_small"
+ LIB.Neutral_Muslim_Brotherhood: "£LIB_muslim_brotherhood_small (NMCL) - National Muslim Council of Liberia"
+ LIB.Neutral_Muslim_Brotherhood_desc: "(Moderate Islam) - The National Muslim Council of Liberia aims to preserve the rights of Muslims in the country. Muslims make up a small portion of Liberians, and most come from the Mandinga group. While Taylor initially gave more freedoms to Liberian Muslims due to his ties with Libya, in recent years he has started a campaign of christianization against them."
+ LIB.Neutral_Muslim_Brotherhood_icon: "£LIB_muslim_brotherhood_small"
+ LIB.Neutral_Autocracy: "£generic_Neutral_Autocracy_small (FAPL) - Freedom Alliance Party of Liberia"
+ LIB.Neutral_conservatism: "£LIB_Neutral_conservatism_small (ALCOP) - All Liberia Coalition Party"
+ LIB.Neutral_conservatism_icon: "£LIB_Neutral_conservatism_small"
+ LIB.oligarchism: "£generic_oligarchism_small (NPL) - National Party of Liberia"
+ LIB.Neutral_Libertarian: "£generic_Neutral_Libertarian_small (RULP) - Reformed United Liberia Party"
+ LIB.neutral_Social: "£LIB_neutral_Social_small (UPP) - United People's Party"
+ LIB.neutral_Social_desc: "(African Socialism) - The United People's Party is a African socialist party. African socialism includes many elements of Marxism-Leninism, but rejects concepts such as anti-religion, class struggle and a violent revolution. Many of its members defected to the LURD rebel group to oppose Taylor, including Sekou Conneh, the leader of the rebels."
+ LIB.neutral_Social_icon: "£LIB_neutral_Social_small"
+ LIB.Nat_Populism: "£LIB_Nat_Populism_small (LP) - Liberty Party"
+ LIB.Nat_Populism_icon: "£LIB_Nat_Populism_small"
+ LIB.Nat_Fascism: "£LIB_Nat_Fascism_small (NPP) - National Patriotic Party"
+ LIB.Nat_Fascism_desc: "(Nationalism) - The National Patriotic Party is the continued political successors of Charles Taylor's rebel group National Patriotic Front. The party serves mainly as a collection of Taylor's loyalist, and doesn't really have a party program. Taylor's 'policies' mainly involve securing his rule over Liberia and its neighbours."
+ LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
+ LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small (AFL) - Armed Forces of Liberia"
+ LIB.Nat_Autocracy_desc: "(Military Junta) - After Taylor's rise to power, he essentially gutted the personnel of the AFL, favouring his personal militia 'Anti-Terrorist Unit' instead. By early 2000s, the AFL has been reduced to a state non-existence in practice, with Taylor having retired the majority of personnel."
  LIB.Nat_Autocracy_icon: "£LIB_Nat_Autocracy_small"
- LIB.Nat_Autocracy_desc: ""
  LIT.conservatism: "£LIT_conservatism Tevynes Sajunga - Lietuvos Krikscionys Demokratai (TS-LKD)"
  LIT.conservatism_icon: "£LIT_conservatism"
  LIT.conservatism_desc: ""
