Internal Faction Improvements & Minor Mechanics and Changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -28,6 +28,7 @@ v1.10.3
   - Limited the 1000 Debt button requiring you to have at least 1t in GDP to take 1t in debt
   - Increased the likelihood of Ag District conversion events
   - Retweaked Chinese PLA Business Ventures idea with new modifiers
+  - Internal faction opinion that is over fifty will now tick down towards 50
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
@@ -51,6 +52,9 @@ v1.10.3
   - Rebalanced a lot of Botswana's tree (focus durations, monetary costs, bonuses etc.)
   - Added Army General for POL
   - Reworked Liberia's political parties, leaders and generals
+  - Hezbollah's Al-Mansar focus now also adds the idea to Palestine/Hamas
+  - Adjusted some Kazakh focuses to give ag districts instead of building slots
+  - The Ace Pilots can now be female
 
  Localisation
   - Major fixes and improvements to the Russian localization
