--- a/localisation/english/MD_dynamic_scripting_l_english.yml
+++ b/localisation/english/MD_dynamic_scripting_l_english.yml
@@ -126,7 +126,6 @@
  script.0.wahabi_ulema: "§YWahabi Ulema§! "
  script.0.the_military: "§YThe Military§! "
  script.0.intelligence_community: "§YThe Intelligence Community§! "
- script.0.isi_pakistan: "§YISI§! "
  script.0.VEVAK: "§YVEVAK§! "
  script.0.the_bazaar: "§YThe Bazaar§! "
  script.0.the_donju: "§YThe Donju§! "
@@ -1425,7 +1424,7 @@
  script.0.QTF_GetName: "[QTF.GetName] "
  script.0.QTF_GetNameWithFlag: "[QTF.GetNameWithFlag] "
  script.0.QTF_GetLeader: "[QTF.GetLeader] "
- script.0.QTF_GetAdjective: "[QTF.GetAdjective] 
+ script.0.QTF_GetAdjective: "[QTF.GetAdjective] "
  script.0.NEJ_GetFlag: "[NEJ.GetFlag] "
  script.0.NEJ_GetName: "[NEJ.GetName] "
  script.0.NEJ_GetNameWithFlag: "[NEJ.GetNameWithFlag] "
@@ -1560,7 +1559,7 @@
  script.0.LUR_GetName: "[LUR.GetName] "
  script.0.LUR_GetNameWithFlag: "[LUR.GetNameWithFlag] "
  script.0.LUR_GetLeader: "[LUR.GetLeader] "
- script.0.LUR_GetAdjective: "[LUR.GetAdjective] 
+ script.0.LUR_GetAdjective: "[LUR.GetAdjective] "
  script.0.MLC_GetFlag: "[MLC.GetFlag] "
  script.0.MLC_GetName: "[MLC.GetName] "
  script.0.MLC_GetNameWithFlag: "[MLC.GetNameWithFlag] "
